# cxx_log

./: CMakeLists.txt  main.cpp
src/: logger.hpp  main.cpp
